<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center">

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:gravity="center_vertical"
	    android:text="@string/phone_call_message"
	    android:textSize="26sp" />
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="20dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:textColor="#943939"
	    android:textStyle="bold"
	    android:text="@string/phone_call_attension"
	    />
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReply"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_design"
            android:layout_marginRight="10dp"
            android:text="@string/reply_button_title" />

        <Button
            android:id="@+id/btnReject"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_design_red"
            android:layout_marginLeft="10dp"
            android:text="@string/reject_button_title" />

    </LinearLayout>

</LinearLayout>
