<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
    	android:background="#2886cc"
    	android:gravity="center_vertical">
    	
	    <TextView
	        android:id="@+id/txtTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
 	        android:layout_marginLeft="20dp"
	        android:layout_marginTop="15dp"
	        android:layout_marginBottom="15dp"
	        android:textSize="20sp"
	        android:textStyle="bold"
	        android:textColor="#ffffff"
	        android:text="@string/app_name" />
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	       	android:gravity="right"
	        android:textSize="14sp"
	        android:textColor="#ffffff"
	   	    android:textStyle="bold"
	   	    android:layout_marginRight="5dp"
	        android:text="@string/ticket_balance_title" />
	   	<TextView 
	   	    android:id="@+id/txtTicketBalance"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:textColor="#ffffff"
	   	    android:textSize="18sp"
	   	    android:textStyle="bold"
	   	    />
	   　<TextView 
	   	    android:layout_marginRight="20dp"
	   	    android:layout_marginLeft="3dp"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:textColor="#ffffff"
	   	    android:textSize="16sp"
	   	    android:textStyle="bold"
	   	    android:text="@string/ticket_balance_unit"/>
	</LinearLayout>
    <View
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@color/border2"
	    android:layout_marginLeft="0dp"
	    android:layout_marginRight="0dp"
	    android:layout_marginTop="0dp" />
</LinearLayout>
